feat: Seccion como funciona close #4

--- a/index.html
+++ b/index.html
@@ -5,9 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/jpg" href="./favicon.ico"/>
+    <link rel="StyleSheet" type="text/css" href="./css/styles.css"/>
     <title>Share</title>
 </head>
 <body>
-    Content
+    <div class="Descrp" style="text-align: center;padding: 0px !important;">
+        <div class="filtroazul">
+            <h1 class="display-4">¿Cómo funciona?</h1>
+        </div>
+    </div>
+    <div class="circulo">
+        <div class="Parrafo1">
+        <p>
+        <h3> Descarga la aplicación</h3>
+        <p> Oriéntate con nosotros en cualquier lugar.<br>
+            Disponible en iOs y Android.
+        </p>
+        </p>
+        </div>
+        <div class="apps">
+            <a href="#"><img height="110px" src="./img/AppstoreGoogle.png"></a>
+        </div>
+    </div>
+    <div class="imagns">
+        <a href="#"><img src="./img/Wire1.png ">  </a>
+    </div>
+    <div class="imagns2">
+        <a href="#"><img src="./img/Wire2.png ">  </a>
+    </div>
+        <div class="Parrafo2">
+        <p>
+        <h3> Créate una cuenta</h3>
+        <p> Regístrate gratis ingresando tus datos y accede a nuestro<br>
+            contenido.
+        </p>
+        </p>
+        </div>
+    <div class="Parrafo3">
+        <p>
+        <h3> Explora las opciones disponibles</h3>
+        <p> Dentro de nuestra aplicación podrás conocer la<br>
+            información de nuestros asesores, elegir y reservar una clase<br>
+            con ellos.
+        </p>
+        </p>
+    </div>
+    <div class="imagns3">
+        <a href="#"><img src="./img/Wire3.png ">  </a>
+    </div>
 </body>
 </html>
