feat: avances section how it works

--- a/index.html
+++ b/index.html
@@ -129,6 +129,79 @@
                 </div>
             </section>
         </main>
+        <main class="p-4 main-white">
+            <section>
+                <h2 class="secondary-title text-primary text-center pb-4">¿Cómo funciona?</h2>
+                <div class="container">
+                    <div class="row">
+                        <div class="col">
+                            <div class="d-flex flex-column justify-content-center ">
+                                <div>
+                                    <div class="app-example-app-right">
+                                        <img src="./img/example-app-main.png" alt="" class="example-app img-fluid" />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col d-flex align-items-center">
+                            <div class="d-flex flex-column justify-content-center ">
+                                <div>
+                                    <div class="text-left fw-bold h5">Descarga la aplicación</div>
+                                    <div class="p-1 text-left legend">
+                                        Oriéntate con nosotros en cualquier lugar. Disponible en dispositivos con iOS y Android.
+                                    </div>
+                                    <div class='pt-2'>
+                                        <img src="./img/AppstoreGoogle.png" alt="" class="feature-img" />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col d-flex align-items-center">
+                            <div class="d-flex flex-column justify-content-center ">
+                                <div>
+                                    <div class="text-center fw-bold h5">Create una cuenta</div>
+                                    <div class="p-1 text-left legend">
+                                        Regístrate gratis ingresando tus datos y accede a nuestro contenido.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="d-flex flex-column justify-content-center ">
+                                <div>
+                                    <div class="app-example-app-right">
+                                        <img src="./img/example-app-login.png" alt="" class="example-app img-fluid" />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>      
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <div class="d-flex flex-column justify-content-center ">
+                                <div>
+                                    <div class="app-example-app-right">
+                                        <img src="./img/example-app-list.png" alt="" class="example-app img-fluid" />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col d-flex align-items-center">
+                            <div class="d-flex flex-column justify-content-center ">
+                                <div>
+                                    <div class="text-left fw-bold h5">Explora las opciones disponibles</div>
+                                    <div class="p-1 text-left legend">
+                                        Dentro de nuestra aplicación podrás conocer la información de los asesores, elegir y reservar una clase con ellos.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
         <script src="./js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
