--- a/index.html
+++ b/index.html
@@ -202,6 +202,68 @@
                 </div>
             </section>
         </main>
+        <main class="p-4 second-section">
+            <section>
+                <h2 class="principal-title text-center text-white">Confía en nuestra experiencia</h2>
+                <div class="p-2 text-white text-center">
+                    Podrás encontrar una lista de asesores disponibles en un solo lugar
+                </div>
+                <div class="container">
+                    <div class="row">
+                            <div class="col-6 col-sm-6 col-lg-3 ">
+                                <div class="d-flex flex-column  justify-content-center p-xs-3 p-xl-5">
+                                    <div class="description d-flex flex-column  justify-content-center align-items-center">
+                                        <div>
+                                        <div class="p-2 text-center h3 fw-bold text-white">S/. 35</div>
+                                        <div class="p-2 text-center text-white">
+                                            Tarifa por hora
+                                        </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-6 col-sm-6 col-lg-3 ">
+                                <div class="d-flex flex-column  justify-content-center p-xs-3 p-xl-5">
+                                    <div class="description d-flex flex-column  justify-content-center align-items-center">
+                                        <div>
+                                        <div class="p-2 text-center h3 fw-bold text-white">500+</div>
+                                        <div class="p-2 text-center text-white">
+                                            Asesores
+                                        </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-6 col-sm-6 col-lg-3 ">
+                                <div class="d-flex flex-column  justify-content-center p-xs-3 p-xl-5">
+                                    <div class="description d-flex flex-column  justify-content-center align-items-center">
+                                        <div>
+                                        <div class="p-2 text-center h3 fw-bold text-white">10000+</div>
+                                        <div class="p-2 text-center text-white">
+                                            Estudiantes
+                                        </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-6 col-sm-6 col-lg-3 ">
+                                <div class="d-flex flex-column  justify-content-center p-xs-3 p-xl-5">
+                                    <div class="description d-flex flex-column  justify-content-center align-items-center">
+                                        <div>
+                                        <div class="p-2 text-center h3 fw-bold text-white">15</div>
+                                        <div class="p-2 text-center text-white">
+                                            Departamentos
+                                        </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        
+                    </div>
+                </div>
+            </section>
+        </main>
         <script src="./js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
