--- a/index.html
+++ b/index.html
@@ -264,6 +264,61 @@
                 </div>
             </section>
         </main>
+        <main class="p-4 main-white">
+            <section>
+                <h2 class="secondary-title text-primary text-center">¿Quieres ser un asesor de Share?</h2>
+                <div>
+                    <div class="container mt-2 p-4">
+                        <div class="row">
+                            <div class="col-lg-6  mt-5">
+                                <img src="./img/CirculoVineta.png" class="rounded float-start" alt="">
+                                <div class="ml-sm-5 text-xxl-start">
+                                    <p class="fw-bold h5"> Incrementa tus asesorías</p>
+                                </div>
+                                <p>
+                                    Enseña y ayuda a más estudiantes a mejorar su rendimiento
+                                    académico y logren sus objetivos.
+                                </p>
+                                <div class="mt-5"></div>
+                                <img src="./img/CirculoVineta.png" class="rounded float-start" alt="...">
+                                <p class="fw-bold h5">Gana dinero</p>
+                                <p>
+                                    Comparte tus conocimientos y genera ganancias por cada
+                                    asesoría que brindas.
+                                </p>
+                                <div class="mt-5"></div>
+                                <img src="./img/CirculoVineta.png" class="rounded float-start" alt="...">
+                                <p class="fw-bold h5">Tu información disponible</p>
+                                <p>
+                                    Presenta tu información educativa y laboral para que los
+                                    estudiantes conozcan más sobre ti.
+                                </p>
+                                <div class="mt-5"></div>
+                                <img src="./img/CirculoVineta.png" class="rounded float-start" alt="...">
+                                <p class="fw-bold h5">Gestiona tu tiempo</p>
+                                <p>
+                                    Acomoda tus horarios disponibles como quieras, nuestras políticas promueven la flexibilidad de nuestros asesores.
+                                </p>
+                                <div class="mt-lg-5"></div>
+                                <div class="mb-4 text-lg-center">
+
+                                    <img src="./img/Google_Play.png" alt="" class="img-fluid principal-img mr-4" />
+                                    <img src="./img/App_Store.png" alt="" class="img-fluid principal-img" />
+                                </div>
+                            </div>
+
+                            <div class="col-lg-1 col-md-12">
+                            </div>
+
+                            <div class="col-lg-5 col-md-12 text-right">
+
+                                <img src="./img/PersonaShare.png" alt="" class="img-fluid big-principal-img ms-2" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
         <script src="./js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
