--- a/index.html
+++ b/index.html
@@ -319,6 +319,73 @@
                 </div>
             </section>
         </main>
+        <!-- Footer -->
+        <footer class="text-center text-lg-start bg-dark text-white">
+            <!-- Section: Links  -->
+            <section class="">
+                <div class="container text-left text-md-start mt-5">
+                    <!-- Grid row -->
+                    <div class="row mt-3">
+                        <!-- Grid column -->
+                        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4 ">
+                            <!-- Content -->
+                            <h6 class="text-uppercase fw-bold mb-4">
+                                <i class="fas fa-gem me-3"></i><img src="/img/logo.png" alt="logo-share" height="30" />
+                            </h6>
+                            <p class="text-left description">
+                                Share es una plataforma online de enseñanza para estudiantes dedicados a las carreras de tecnología e información.
+                            </p>
+                        </div>
+
+                        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto ">
+                            <!-- Links -->
+                            <h6 class="text-left fw-bold mb-4">
+                                Menú
+                            </h6>
+                            <p>
+                                <a href="#!" class="text-reset">Características</a>
+                            </p>
+                            <p>
+                                <a href="#!" class="text-reset">Tutorial</a>
+                            </p>
+                            <p>
+                                <a href="#!" class="text-reset">Logros</a>
+                            </p>
+                            <p>
+                                <a href="#!" class="text-reset">Testimonios</a>
+                            </p>
+                        </div>
+                        <!-- Grid column -->
+                        <!-- Grid column -->
+                        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                            <!-- Links -->
+                            <h6 class="fw-bold mb-4">
+                                Contacto
+                            </h6>
+                             <p>
+                                 <i class="bi bi-envelope me-3"></i>
+                                 contacto@share.com.pe</p>
+                            <p>
+                                <i class="fas fa-envelope me-3"></i>
+                                +51 922556565
+                            </p>
+                            <p><i class="fas fa-phone me-3"></i> 772 Av. Grau - La Molina</p>
+
+                        </div>
+                        <!-- Grid column -->
+                    </div>
+                    <!-- Grid row -->
+                </div>
+            </section>
+            <!-- Section: Links  -->
+
+            <!-- Copyright -->
+            <div class="text-left p-3" style="background-color: #414141;">
+                © 2021 Share. Todos los derechos reservados
+            </div>
+            <!-- Copyright -->
+        </footer>
+        <!-- Footer -->
         <script src="./js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
