fixed logo and padding footer

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <nav class="navbar navbar-expand-md navbar-dark bg-primary">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#">
-                        <img src="/img/white-logo.png" alt="logo-share" height="30" />
+                        <img src="./img/white-logo.png" alt="logo-share" height="30" />
                     </a>
                     <button
                         class="navbar-toggler"
@@ -257,11 +257,11 @@
                 </div>
             </section>
         </main>
-        <main class="p-4 main-white">
+        <main class="pt-4 pl-4 pr-4 pb-0 main-white">
             <section>
                 <h2 class="secondary-title text-primary text-center">¿Quieres ser un asesor de Share?</h2>
                 <div>
-                    <div class="container mt-2 p-4">
+                    <div class="container mt-2 pt-4 pl-4 pr-4 pb-0 ">
                         <div class="row">
                             <div class="col-lg-6 mt-5">
                                 <img src="./img/CirculoVineta.png" class="rounded float-start" alt="" />
@@ -305,7 +305,7 @@
             </section>
         </main>
         <!-- Footer -->
-        <footer class="text-center text-lg-start bg-dark text-white">
+        <footer class="p-4 text-center text-lg-start bg-dark text-white">
             <!-- Section: Links  -->
             <section class="">
                 <div class="container text-left text-md-start mt-5">
@@ -316,7 +316,7 @@
                             <!-- Content -->
                             <h6 class="text-uppercase fw-bold mb-4">
                                 <i class="fas fa-gem me-3"></i
-                                ><img src="/img/white-logo.png" alt="logo-share" height="30" />
+                                ><img src="./img/white-logo.png" alt="logo-share" height="30" />
                             </h6>
                             <p class="text-left description">
                                 Share es una plataforma online de enseñanza para estudiantes dedicados a las carreras de
@@ -341,14 +341,14 @@
                             </p>
                         </div>
                         <!-- Grid column -->
-                        <!-- Grid column -->
                         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                             <!-- Links -->
-                            <h6 class="fw-bold mb-4">Contacto</h6>
-                            <p>
+                            <h6 class="fw-bold mb-4">
+                                Contacto
+                            </h6>
+                             <p>
                                 <i class="bi bi-envelope me-3"></i>
-                                contacto@share.com.pe
-                            </p>
+                                 contacto@share.com.pe</p>
                             <p>
                                 <i class="fas fa-envelope me-3"></i>
                                 +51 922556565
@@ -358,14 +358,15 @@
                         <!-- Grid column -->
                     </div>
                     <!-- Grid row -->
+                    <div class="row">
+                        <div class="text-left p-3 footer ml-5" >
+                            © 2021 Share. Todos los derechos reservados
+                        </div>
+                    </div>
                 </div>
             </section>
-            <!-- Section: Links  -->
-
             <!-- Copyright -->
-            <div class="text-left p-3" style="background-color: #414141">
-                © 2021 Share. Todos los derechos reservados
-            </div>
+            
             <!-- Copyright -->
         </footer>
         <!-- Footer -->
